--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(to right, #065317, #470279); /* Subtle gradient from light gray to slightly darker gray */
-    font-family: 'Georgia', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -26,22 +26,31 @@ body {
     color: #ffffff; /* Set the desired hover color */
 }
 
+.navbar-brand {
+    background-color: #470279; /* Mardi Gras yellow */
+    border-radius: 10px; /* Add border-radius for rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
+}
+
 .container {
     margin-top: 20px;
     text-align: center;
 }
 
 .jumbotron {
-    background-color: #fde5b0cd;/* Vibrant lavender/lilac */
+    background-color: #fbe8bef7;/* Vibrant lavender/lilac */
     color: #ffffff;
     padding-bottom: 0px;
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
     text-align: center;
     align-items: center;
     align-content: center;
     justify-content: center;
-    width: 600px;
+    max-width: 600px;
+    max-height: 400px;
+    border-radius: 100px; /* Add border-radius for rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
 }
 
 .embed-responsive {
@@ -68,8 +77,8 @@ h2 {
 
 .profile-img {
     width: 200px;
-    height: 150px;
-    border-radius: 50%;
+    height: 200px;
+    border-radius: 20%;
     margin-bottom: 10px;
 }
 
@@ -116,7 +125,7 @@ h2 {
     padding: 20px; /* Adjust the padding as needed */
     border-radius: 10px; /* Add border-radius for rounded corners */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
-    width: 600px;
+    width: 100%;
     height: 400px;
     border: 2px solid white;
 }
@@ -125,7 +134,7 @@ h2 {
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
-    max-width: 800px;
+    max-width: 100%;
 }
 
 .performance-card-container {
@@ -262,4 +271,54 @@ h2 {
 .logo-img {
     max-width: 100%;
     height: auto; /* Ensures the aspect ratio of the image is maintained */
+}
+
+.audio-player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    color: #4bc357;
+}
+
+.audio-controls {
+    margin-top: 10px;
+}
+
+.audio-controls .btn {
+    margin: 0 5px;
+}
+
+.image-container {
+    height: 100px;
+    background-image: url('images/trumpet.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-bottom: 40px;
+}
+
+.hover-enlarge {
+    transition: transform 0.3s ease-in-out;
+}
+
+.hover-enlarge:hover {
+    transform: scale(1.2);
+}
+
+/* Media query for 2 images per row */
+@media (min-width: 300px) {
+    .image-container {
+        background-size: calc(50%); /* Adjust size for 2 images per row */
+        background-repeat: repeat-x;
+    }
+}
+
+/* Media query for 3 images per row */
+@media (min-width: 600px) {
+    .image-container {
+        background-size: calc(33.33%); /* Adjust size for 3 images per row */
+        background-repeat: repeat-x;
+    }
 }
